# itmo_CPP

./: README.md
10/: BruteForce.cpp  BruteForce.h  CMakeLists.txt  ChebyshevDistance.cpp  ChebyshevDistance.h  EuclideanDistance.cpp  EuclideanDistance.h  KruskalAlgo.cpp  KruskalAlgo.h  SortAlgo.cpp  SortAlgo.h  TaxicabGeometry.cpp  TaxicabGeometry.h  interface.Algorithm.h  interface.Metric.h  main.cpp
11/: BadFromString.h  CMakeLists.txt  ConvertString.h  ConvertString.hpp  main.cpp
2/: Student.cpp  Student.h  main.cpp
3/: Makefile  Makefile2  bye.cpp  hello.cpp  here.cpp  main.cpp  myLib.h
5/: CMakeLists.txt  String.cpp  String.h  main.cpp
7/: Array.cpp  Array.h  CMakeLists.txt  main.cpp
8/: Animal.cpp  Animal.h  Bear.cpp  Bear.h  BearPigMan.cpp  BearPigMan.h  CMakeLists.txt  Man.cpp  Man.h  Pig.cpp  Pig.h  Unit.cpp  Unit.h  main.cpp
9/: CMakeLists.txt  hw91.h  hw91.hpp  main.cpp
